k8s/api-actix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-actix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-actix
  template:
    metadata:
      labels:
        app: api-actix
    spec:
      containers:
      - name: api-actix
        image: nexpyrs-api-actix
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: api-actix
spec:
  selector:
    app: api-actix
  ports:
  - port: 8080
