k8s/api-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-django
  template:
    metadata:
      labels:
        app: api-django
    spec:
      containers:
      - name: api-django
        image: nexpyrs-api-django
        ports:
        - containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: api-django
spec:
  selector:
    app: api-django
  ports:
  - port: 8001
