k8s/api-fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-fastapi
  template:
    metadata:
      labels:
        app: api-fastapi
    spec:
      containers:
      - name: api-fastapi
        image: nexpyrs-api-fastapi
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: api-fastapi
spec:
  selector:
    app: api-fastapi
  ports:
  - port: 8000
