k8s/ui-angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-angular
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-angular
  template:
    metadata:
      labels:
        app: ui-angular
    spec:
      containers:
      - name: ui-angular
        image: nexpyrs-ui-angular
        ports:
        - containerPort: 4200

---
apiVersion: v1
kind: Service
metadata:
  name: ui-angular
spec:
  selector:
    app: ui-angular
  ports:
  - port: 4200
