k8s/ui-next.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-next
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-next
  template:
    metadata:
      labels:
        app: ui-next
    spec:
      containers:
      - name: ui-next
        image: nexpyrs-ui-next
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: ui-next
spec:
  selector:
    app: ui-next
  ports:
  - port: 3000
