k8s/ui-vite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-vite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-vite
  template:
    metadata:
      labels:
        app: ui-vite
    spec:
      containers:
      - name: ui-vite
        image: nexpyrs-ui-vite
        ports:
        - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: ui-vite
spec:
  selector:
    app: ui-vite
  ports:
  - port: 5173
