k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexpyrs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: next.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-next
            port:
              number: 3000
  - host: angular.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-angular
            port:
              number: 4200
  - host: vite.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-vite
            port:
              number: 5173
  - host: fastapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-fastapi
            port:
              number: 8000
  - host: django.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-django
            port:
              number: 8001
